--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-angular": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.25.0",
     "@fullstacksjs/eslint-config": "^12.1.1",
     "@types/react": "^19.1.2",
