--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "tabWidth": 2,
   "printWidth": 80,
   "semi": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
