--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@tailwindcss/postcss": "^4.1.6",
     "lucide-react": "^0.509.0",
     "postcss": "^8.5.3",
